--- a/graphics/scatter-plot/styles.css
+++ b/graphics/scatter-plot/styles.css
@@ -21,9 +21,24 @@ text {
 
 .line {
   fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
+  stroke-width: 1px;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 5s linear alternate infinite;
 }
+@keyframes dash{
+   from{
+       stroke-dashoffset: 1000;
+   }
+   to{
+       stroke-dashoffset: 0;
+   }
+}
+
+.dot {
+  animation: dash 5s linear alternate infinite;
+}
+
 .axis line, path, text {
   stroke: var(--axis-color);
 }
