--- a/graphics/scatter-plot/styles.css
+++ b/graphics/scatter-plot/styles.css
@@ -180,6 +180,29 @@ label:active:after {
   margin: 0 auto;
   */
   height: 350px;
-  overflow-y: scroll;
+  overflow-y: hidden;
   display: inline-block;
+}
+
+#loading {
+   width: 100%;
+   height: 100%;
+   z-index: 99;
+   text-align: center;
+}
+
+#loading-image {
+  z-index: 100;
+  margin-top: 50%;
+}
+
+#rufous-sandbox {
+  z-index: 50;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+a {
+  color: #fff;
 }
